--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Imzoughene</h1>
-    <script src="js/script.js"></script>
+    <script src=""></script><!--js/script.js-->
+    <script src="js/variables.js"></script>
 </body>
 </html>
