--- a/index.html
+++ b/index.html
@@ -8,7 +8,16 @@
 </head>
 <body>
     <h1>Imzoughene</h1>
-    <script src=""></script><!--js/script.js-->
-    <script src="js/variables.js"></script>
+    <script src="js/instanceOf.js"></script>
+    <!-- js/typeof.js -->
+    <!-- js/object.js -->
+    <!-- js/Symbol.js -->
+    <!-- js/undefined.js -->
+    <!-- js/null.js -->
+    <!-- js/boolean.js -->
+    <!-- js/string.js -->
+    <!-- js/script.js -->
+    <!-- js/variables.js -->
+    <!-- js/numbre.js -->
 </body>
 </html>
