--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <h1>Imzoughene</h1>
-    <script src="js/instanceOf.js"></script>
+    <script src="js/primitiveVSreference.js"></script>
+    <!-- js/instanceOf.js -->
     <!-- js/typeof.js -->
     <!-- js/object.js -->
     <!-- js/Symbol.js -->
